--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.3",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "firebase": "^10.12.2",
